--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "swiper": "^10.2.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue3-marquee": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
